chore(template): test github issue templates

--- a/.github/ISSUE_TEMPLATE/test.yml
+++ b/.github/ISSUE_TEMPLATE/test.yml
@@ -19,7 +19,7 @@ body:
       description: Link to the intercom, slack thread or email thread for the support request
     validations:
       required: true
-  - type: checkbox
+  - type: checkboxes
     id: activated
     attributes:
       label: Activated
